[gd_scene load_steps=3 format=2]

[ext_resource path="res://Bullets/TouchControls/TouchControls/TouchButton.gd" type="Script" id=1]
[ext_resource path="res://Bullets/TouchControls/TouchControls/right2.png" type="Texture" id=2]

[node name="TouchButton" type="Button"]
anchor_bottom = 1.0
margin_right = 325.0
rect_min_size = Vector2( 325, 1080 )
rect_pivot_offset = Vector2( 162, 540 )
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
flat = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="arrow" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.5
margin_top = -70.0
margin_right = 257.5
margin_bottom = 208.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
